# YOLO

./: process-data.ipynb  pyproject.toml  setup.py
yolo/: lazy.py  main_config.yaml  train.py
yolo/config/dataset/: toma.yaml
yolo/config/task/: train.yaml
yolo/model/: yolo.py
yolo/tools/: data_augmentation.py  data_loader.py  loss_functions.py
